JS Course step 157

--- a/Javascript Projects/HTML_Files/Basic_HTML_6.html
+++ b/Javascript Projects/HTML_Files/Basic_HTML_6.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <script src="Basic_JavaScript_6.js"></script>
+    <script src="../JavaScript_Files/Basic_JavaScript_6.js"></script>
 
     <p> Riders of this roller coaster must be at least 6ft tall.</p>
     <input id="Height" value="6"/>
