step 157 JS Course

--- a/Javascript Projects/HTML_Files/Basic_HTML_9.html
+++ b/Javascript Projects/HTML_Files/Basic_HTML_9.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Basic_JavaScript_8</title>
+    <title>Basic_JavaScript Slides and countdown</title>
     <meta name="viewport" content="width=device_width, initial-scale =1">
 <script src="../JavaScript_Files/Basic_JavaScript_9.js"></script>
 <link rel="stylesheet" type="text/css" href= "../CSS_Files/Basic_CSS_1.css">
@@ -64,5 +64,6 @@
 
 </div>
 
+<script src="../JavaScript_Files/Basic_JavaScript_9.js"></script>
 </body>
 </html>
