--- a/Javascript Projects/HTML_Files/Basic_HTML_10.html
+++ b/Javascript Projects/HTML_Files/Basic_HTML_10.html
@@ -37,7 +37,26 @@
 <button onclick="constant_Function()">Click for Function</button>
 <br>
 <!--End Constant Variable-->
+
+<!--Return Functionm-->
     
+
+<p id="Return"></p>
+
+<!--ENd Return function-->
+
+<!--Let Variable-->
+<br> 
+<br>
+<p id = "LetFunction"> Let Function</p>
+
+<!--End Let Function-->
+
+<!--Break and Continue statements-->
+
+<p id="Break"></p>
+
+<p id = "Continue"></p>
     <script src="../JavaScript_Files/Basic_JavaScript_10.js"></script>
 </body>   
 </html>
